--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -9,7 +9,7 @@
 	<version>${version}</version>
 
 	<!-- change the packaging to bundle (from jar) to support OSGi -->
-	<packaging>jar</packaging>
+	<packaging>bundle</packaging>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -22,13 +22,6 @@
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.mgt</artifactId>
 			<version>5.0.7</version>
-		</dependency>
-
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -76,8 +69,8 @@
 				<extensions>true</extensions>
 				<configuration>
 					<instructions>
-						<Bundle-SymbolicName>${groupId}</Bundle-SymbolicName>
-						<Bundle-Name>${groupId}</Bundle-Name>
+						<Bundle-SymbolicName>${artifactId}</Bundle-SymbolicName>
+						<Bundle-Name>${artifactId}</Bundle-Name>
 						<Bundle-Version>${version}</Bundle-Version>
 						<Export-Package>
                             ${groupId}.*,
